<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Login.WelcomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login_title"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/login_description"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />

        <Button
            android:id="@+id/firstButton"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:backgroundTint="#85248C"
            android:text="@string/login_button"
            android:textAlignment="viewStart"
            android:textStyle="bold"
            app:icon="@drawable/go"
            app:iconGravity="end" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/login_account"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_signup"
            android:textAlignment="center"
            android:textColor="#85248C"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>
</FrameLayout>