<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.profile.LanguageFragment">

    <LinearLayout
        android:id="@+id/tetxwrterg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Image Preview -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@android:color/darker_gray"
            android:contentDescription="Selected Image"
            android:scaleType="centerCrop" />

        <!-- Recognized Text Output -->

        <!-- Buttons for Image Selection and Processing -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/selectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="8dp"
                android:text="@string/insert_AI_select" />

            <Button
                android:id="@+id/captureButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="8dp"
                android:text="@string/insert_AI_capture" />

        </LinearLayout>

        <Button
            android:id="@+id/recognizeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:backgroundTint="#85248C"
            android:enabled="true"
            android:padding="8dp"
            android:text="@string/insert_AI_recognize" />

    </LinearLayout>


</FrameLayout>