<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Profile.LanguageFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginTop="20dp"
            android:text="@string/transaction_detail"
            android:textColor="#FFFFFF"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/editTextText11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#85248C"
                android:text="@string/transaction_button_update" />

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="25dp"
                android:backgroundTint="#C52121"
                android:text="@string/transaction_button_delete"
                app:icon="@android:drawable/ic_menu_delete" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>