<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login_title"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="48sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:backgroundTint="#FFFFFF"
            android:hint="Email"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#F4F4F4" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:backgroundTint="#85248C"
            android:text="@string/login_button" />

        <TextView
            android:id="@+id/resetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_reset"
            android:textAlignment="center"
            android:textColor="#85248C"
            android:textSize="16sp" />

    </LinearLayout>
</FrameLayout>