<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/Transaction"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="50dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/imageInsert1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/language"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text="@string/profile_language_title"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@id/textView3"
                    app:layout_constraintStart_toEndOf="@id/imageInsert1"
                    app:layout_constraintTop_toTopOf="@id/imageInsert1" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text="@string/profile_language_description"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="@id/imageInsert1"
                    app:layout_constraintStart_toEndOf="@id/imageInsert1"
                    app:layout_constraintTop_toBottomOf="@id/textView1" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/Ai"
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/imageInsert1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/logout"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text="@string/profile_logout_title"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@id/imageInsert1"
                    app:layout_constraintStart_toEndOf="@id/imageInsert1"
                    app:layout_constraintTop_toTopOf="@id/imageInsert1" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

    </LinearLayout>
</FrameLayout>