<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Login.SignupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_name"
            android:textColor="#FFFFFF"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextText9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/editTextText10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Email"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextText6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Password"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextText7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/signup_repeatPassword"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextText8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:backgroundTint="#85248C"
            android:text="@string/signup_button" />
    </LinearLayout>
</FrameLayout>